Add pasta recipe link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <h1>Matcha Recipes</h1>
         <a href="recipes/sandwich.html"><h2>Sandwich</h2></a>
+        <a href="recipes/pasta.html"><h2>Pasta</h2></a>
         
     </body>
 </html>
