Create soup recipe page and link to index page

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     </head>
     <body>
         <h1>Matcha Recipes</h1>
-        <a href="recipes/sandwich.html"><h2>Sandwich</h2></a>
-        <a href="recipes/pasta.html"><h2>Pasta</h2></a>
-        
+        <p></p>
+        <ul>
+        <li><a href="recipes/sandwich.html"><h2>Sandwich</h2></a></li>
+        <li><a href="recipes/pasta.html"><h2>Pasta</h2></a></li>
+        <li><a href="recipes/soup.html"><h2>Soup</h2></a></li>
+        </ul>
+
     </body>
 </html>
