Change name & add gif

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Matcha Cooks</title>
+        <title>Vegeta Cooks</title>
     </head>
     <body>
-        <h1>Matcha Recipes</h1>
+        <h1>Vegeta Recipes</h1>
+        <p></p>
+        <img src="recipes/vegeta.gif" alt="Vegeta animation">
         <p></p>
         <ul>
         <li><a href="recipes/sandwich.html"><h2>Sandwich</h2></a></li>
