Add icon to indix page

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
         <p></p>
         <img src="recipes/vegeta.gif" alt="Vegeta animation">
         <p></p>
+        <h2>Our Worldclass Recipes</h2>
+        <p></p>
         <ul>
-        <li><a href="recipes/sandwich.html"><h2>Sandwich</h2></a></li>
-        <li><a href="recipes/pasta.html"><h2>Pasta</h2></a></li>
-        <li><a href="recipes/soup.html"><h2>Soup</h2></a></li>
+        <li><a href="recipes/sandwich.html"><h3>Sandwich</h3><img src="recipes/sandwich-icon01.png" alt="sandwich icon"></a></li>
+        <li><a href="recipes/pasta.html"><h3>Pasta</h3><img src="recipes/pasta-icon01.png" alt="pasta icon"></a></li>
+        <li><a href="recipes/soup.html"><h3>Soup</h3><img src="recipes/icon-soup.png" alt="soup icon"></a></li>
         </ul>
 
     </body>
