Add emphasis on description

--- a/recipes/soup.html
+++ b/recipes/soup.html
@@ -11,11 +11,11 @@
     <p></p>
     <h2>Description</h2>
     <p></p>
-    <p>A creamy tomato soup is typically the result of, well, stirring in heavy cream. 
+    <p><em>A creamy tomato soup is typically the result of, well, stirring in heavy cream. 
         But in this vegan version, bread gives the soup its silky-smooth texture. 
         Here's how it works: French bread is soaked in rice or almond milk before getting pureed with a cooked tomato mixture flavored with onion, garlic, and oregano. 
         The vinegar stirred in at the end adds brightness and balance. Serve in bowls garnished with more fresh oregano, a drizzle of olive oil, and freshly-ground black pepper—and the remainder of the French bread on the side. 
-        Keep this recipe handy, because you'll want to keep it in rotation all soup-season long. </p>
+        Keep this recipe handy, because you'll want to keep it in rotation all soup-season long. </em></p>
         <p></p>
         <p>This recipe takes about 30 min to make for 4 serving</p>
         <p></p>
