--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>Vegeta Cooks</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Vegeta Recipes</h1>
+        <div>Vegeta Recipes</div>
         <p></p>
         <img src="recipes/vegeta.gif" alt="Vegeta animation">
         <p></p>
